Made changes to the event_room pate

--- a/event_room.html
+++ b/event_room.html
@@ -89,32 +89,58 @@
                     <tr>
                         <td>1</td>
                         <td>Bring medical services to the station</td>
-                        <td class="danger">Pending</td>
+                        <td>
+                            <select style="background-color: white">
+                                <option value="pending">Pending</option>
+                                <option value="available">Available</option>
+                                <option value="done">Done</option>
+                            </select>
+                        </td>
                         <td>Medical Team</td>
                         <td>self</td>
                     </tr>
                     <tr>
                         <td>2</td>
                         <td>Bring first Aid kit</td>
-                        <td class="warning">Available</td>
+                        <td>
+                            <select style="background-color: white">
+                                <option value="pending">Pending</option>
+                                <option value="available">Available</option>
+                                <option value="done">Done</option>
+                            </select>
+                        </td>
                         <td>Medical Team</td>
                         <td>self</td>
                     </tr>
                     <tr>
                         <td>3</td>
                         <td>Bring Ambulance</td>
-                        <td class="success">Done</td>
+                        <td>
+                            <select style="background-color: white">
+                                <option value="pending">Pending</option>
+                                <option value="available">Available</option>
+                                <option value="done">Done</option>
+                            </select>
+                        </td>
                         <td>Medical Team</td>
                         <td>self</td>
                     </tr>
                     <tr>
                         <td>4</td>
                         <td>Bring medical services to the station</td>
-                        <td class="danger">Pending</td>
+                        <td>
+                            <select style="background-color: white">
+                                <option value="pending">Pending</option>
+                                <option value="available" selected="selected">Available</option>
+                                <option value="done">Done</option>
+                            </select>
+                        </td>
                         <td>Medical Team</td>
                         <td>self</td>
                     </tr>
                 </table>
+
+                <div class="btn btn-success">Update List</div>
             </div>
 
             <!-- Component showing PingRoom and stats -->
