Integrated Index page with backend and completed the module

--- a/index.html
+++ b/index.html
@@ -8,22 +8,10 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css">
-    <style>
-        *{
-            font-family: 'ABeeZee', sans-serif;
-        }
-        .event-room-card{
-            padding: 20px;
-            background-color: #ECEFF1;
-            margin-bottom: 30px;
-            height: 200px;
-            border-radius: 7px;
-        }
-    </style>
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-inverse" style="padding: 5px;">
+    <nav class="navbar navbar-inverse nav-bar">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -51,7 +39,7 @@
     </nav>
 
     <!-- JumboTron -->
-    <div class="jumbotron" style="background-color: #F57C00; margin-top: -20px">
+    <div class="jumbotron jumbo-tron">
         <div class="container" style="color: white">
             <h1>DManager - The Disaster manager</h1>
             <br>
@@ -69,83 +57,21 @@
             <br>
         </div>
     </div>
-    <div class="container-fluid" id="event-rooms">
-        <div class="row">
-            <div class="col-md-offset-2 col-md-2 event-room-card">
-                <h2>This is the card title</h2>
-                <p>This is the card description. Here we will provide as much information as possible about the ongoing disaster</p>
-            </div>
-            <div class="col-md-offset-1 col-md-2 event-room-card">
-                <h2>This is the card title</h2>
-                <p>This is the card description</p>
-            </div>
-            <div class="col-md-offset-1 col-md-2 event-room-card">
-                <h2>This is the card title</h2>
-                <p>This is the card description</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-offset-2 col-md-2 event-room-card">
-                <h2>This is the card title</h2>
-                <p>This is the card description</p>
-            </div>
-            <div class="col-md-2 col-md-offset-1 event-room-card">
-                <h2>This is the card title</h2>
-                <p>This is the card description</p>
-            </div>
-            <div class="col-md-2 col-md-offset-1 event-room-card">
-                <h2>This is the card title</h2>
-                <p>This is the card description</p>
-            </div>
+    <div class="container">
+        <div class="row" id="active-rooms">
         </div>
     </div>
 
     <div class="container">
-        <div class="row">
+        <div class="row" id="inactive-rooms">
             <h1>InActive Event Rooms</h1>
             <hr style="border-color: #bdbdbd">
             <br>
         </div>
     </div>
 
-    <div class="container-fluid" id="inactive-event-rooms">
-        <div class="row">
-            <div class="col-md-offset-2 col-md-2 event-room-card">
-                <h2>This is the card title</h2>
-                <p>This is the card description. Here we will provide as much information as possible about the ongoing disaster</p>
-            </div>
-            <div class="col-md-offset-1 col-md-2 event-room-card">
-                <h2>This is the card title</h2>
-                <p>This is the card description</p>
-            </div>
-            <div class="col-md-offset-1 col-md-2 event-room-card">
-                <h2>This is the card title</h2>
-                <p>This is the card description</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-offset-2 col-md-2 event-room-card">
-                <h2>This is the card title</h2>
-                <p>This is the card description</p>
-            </div>
-            <div class="col-md-2 col-md-offset-1 event-room-card">
-                <h2>This is the card title</h2>
-                <p>This is the card description</p>
-            </div>
-            <div class="col-md-2 col-md-offset-1 event-room-card">
-                <h2>This is the card title</h2>
-                <p>This is the card description</p>
-            </div>
-        </div>
-    </div>
-
-
-
-
-    <script
-            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
-            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
