--- a/login.html
+++ b/login.html
@@ -49,46 +49,29 @@
             <div id="signup">
                 <h1>Sign Up as a provider</h1>
 
-                <form action="/" method="post">
-
-                    <!--<div class="top-row">-->
-                        <!--<div class="field-wrap">-->
-                            <!--<label>-->
-                                <!--First Name<span class="req">*</span>-->
-                            <!--</label>-->
-                            <!--<input type="text" required autocomplete="off" />-->
-                        <!--</div>-->
-
-                        <!--<div class="field-wrap">-->
-                            <!--<label>-->
-                                <!--Last Name<span class="req">*</span>-->
-                            <!--</label>-->
-                            <!--<input type="text"required autocomplete="off"/>-->
-                        <!--</div>-->
-                    <!--</div>-->
-
+                <form>
                     <div class="field-wrap">
                         <label>
                             Role<span class="req">*</span>
                         </label>
-                        <input type="email"required autocomplete="off"/>
+                        <input id="register_role" type="text"required autocomplete="off"/>
                     </div>
 
                     <div class="field-wrap">
                         <label>
                             Email Address<span class="req">*</span>
                         </label>
-                        <input type="email"required autocomplete="off"/>
+                        <input id="register_email" type="email" required autocomplete="off"/>
                     </div>
 
                     <div class="field-wrap">
                         <label>
                             Set A Password<span class="req">*</span>
                         </label>
-                        <input type="password"required autocomplete="off"/>
+                        <input id="register_password" type="password" required autocomplete="off"/>
                     </div>
 
-                    <button type="submit" class="button button-block"/>Get Started</button>
+                    <p class="button button-block" style="text-align: center" onclick="register()">Get Started</p>
 
                 </form>
 
@@ -97,25 +80,25 @@
             <div id="login">
                 <h1>Welcome Back!</h1>
 
-                <form action="/" method="post">
+                <form>
 
                     <div class="field-wrap">
                         <label>
                             Email Address<span class="req">*</span>
                         </label>
-                        <input type="email"required autocomplete="off"/>
+                        <input id="login_email" type="email"required autocomplete="off"/>
                     </div>
 
                     <div class="field-wrap">
                         <label>
                             Password<span class="req">*</span>
                         </label>
-                        <input type="password"required autocomplete="off"/>
+                        <input id="login_password" type="password" required autocomplete="off"/>
                     </div>
 
                     <p class="forgot"><a href="#">Forgot Password?</a></p>
 
-                    <button class="button button-block"/>Log In</button>
+                    <p class="button button-block" style="text-align: center" onclick="login()">Log In</p>
 
                 </form>
 
