--- a/event_room.html
+++ b/event_room.html
@@ -36,12 +36,13 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
-                    <li><a href="#event-rooms">Event Rooms</a></li>
+                    <li><a href="dashboard.html">Dashboard</a></li>
+                    <li><a href="index.html#event-rooms">Event Rooms</a></li>
                     <li><a href="#">Whisper Chat</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="login.html">Login | Sign up</a></li>
+                    <li><a href="settings.html">Settings</a></li>
+                    <li><a href="#">Logout</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -85,6 +86,7 @@
                         <th>Status</th>
                         <th>Assigned To</th>
                         <th>Assigned By</th>
+                        <th>Remove</th>
                     </tr>
                     <tr>
                         <td>1</td>
@@ -98,6 +100,9 @@
                         </td>
                         <td>Medical Team</td>
                         <td>self</td>
+                        <td>
+                            <div class="btn btn-danger" style="margin: 3px;">x</div>
+                        </td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -111,6 +116,9 @@
                         </td>
                         <td>Medical Team</td>
                         <td>self</td>
+                        <td>
+                            <div class="btn btn-danger" style="margin: 3px;">x</div>
+                        </td>
                     </tr>
                     <tr>
                         <td>3</td>
@@ -124,6 +132,9 @@
                         </td>
                         <td>Medical Team</td>
                         <td>self</td>
+                        <td>
+                            <div class="btn btn-danger" style="margin: 3px;">x</div>
+                        </td>
                     </tr>
                     <tr>
                         <td>4</td>
@@ -137,10 +148,14 @@
                         </td>
                         <td>Medical Team</td>
                         <td>self</td>
+                        <td>
+                            <div class="btn btn-danger" style="margin: 3px;">x</div>
+                        </td>
                     </tr>
                 </table>
 
                 <div class="btn btn-success">Update List</div>
+                <div class="btn btn-default">Add New</div>
             </div>
 
             <!-- Component showing PingRoom and stats -->
@@ -161,3 +176,4 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
+
