--- a/dashboard.html
+++ b/dashboard.html
@@ -7,146 +7,72 @@
     <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/index.css">
-    <style>
-        *{
-            font-family: 'ABeeZee', sans-serif;
-        }
-        .event-room-card{
-            padding: 20px;
-            background-color: #ECEFF1;
-            margin-bottom: 30px;
-            height: 200px;
-            border-radius: 7px;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/dashboard.css">
 </head>
 <body>
-<!-- Navbar -->
-<nav class="navbar navbar-inverse" style="padding: 5px;">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="index.html">DManager</a>
-        </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-inverse" style="padding: 5px;">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">DManager</a>
+            </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Dashboard<span class="sr-only">(current)</span></a></li>
-                <li><a href="#event-rooms">Event Rooms</a></li>
-                <li><a href="#">Whisper Chat</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="settings.html">Settings</a></li>
-                <li><a href="#">Logout</a></li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Dashboard<span class="sr-only">(current)</span></a></li>
+                    <li><a href="#" onclick="createRoom()">Create-Room</a></li>
+                    <li><a href="#">Whisper Chat</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="settings.html">Settings</a></li>
+                    <li><a href="#">Logout</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
 
-<!-- JumboTron -->
-<div class="jumbotron" style="background-color: #F57C00; margin-top: -20px">
-    <div class="container" style="color: white">
-        <h1>Welcome User. This is your DManager Dashboard</h1>
-        <br>
-        <p> DManager - The Best way to manage and control disasters. Create Rooms and coordinate all the actions and communications from one place.</p>
-        <br>
-    </div>
-</div>
-<br><br>
-
-<!-- Event Room cards -->
-<div class="container">
-    <div class="row">
-        <h1>Active Event Rooms</h1>
-        <hr style="border-color: #bdbdbd">
-        <br>
-    </div>
-</div>
-<div class="container-fluid" id="event-rooms">
-    <div class="row">
-        <div class="col-md-offset-2 col-md-2 event-room-card">
-            <h2>This is the card title</h2>
-            <p>This is the card description. Here we will provide as much information as possible about the ongoing disaster</p>
-        </div>
-        <div class="col-md-offset-1 col-md-2 event-room-card">
-            <h2>This is the card title</h2>
-            <p>This is the card description</p>
-        </div>
-        <div class="col-md-offset-1 col-md-2 event-room-card">
-            <h2>This is the card title</h2>
-            <p>This is the card description</p>
+    <!-- JumboTron -->
+    <div class="jumbotron" style="background-color: #F57C00; margin-top: -20px">
+        <div class="container" style="color: white">
+            <h1>Welcome User. This is your DManager Dashboard</h1>
+            <br>
+            <p> DManager - The Best way to manage and control disasters. Create Rooms and coordinate all the actions and communications from one place.</p>
+            <br>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-offset-2 col-md-2 event-room-card">
-            <h2>This is the card title</h2>
-            <p>This is the card description</p>
-        </div>
-        <div class="col-md-2 col-md-offset-1 event-room-card">
-            <h2>This is the card title</h2>
-            <p>This is the card description</p>
-        </div>
-        <div class="col-md-2 col-md-offset-1 event-room-card">
-            <h2>This is the card title</h2>
-            <p>This is the card description</p>
+    <br><br>
+
+    <div class="container">
+        <div class="row">
+            <h1>Active Event Rooms</h1>
+            <hr style="border-color: #bdbdbd">
+            <br>
         </div>
     </div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <h1>InActive Event Rooms</h1>
-        <hr style="border-color: #bdbdbd">
-        <br>
-    </div>
-</div>
-
-<div class="container-fluid" id="inactive-event-rooms">
-    <div class="row">
-        <div class="col-md-offset-2 col-md-2 event-room-card">
-            <h2>This is the card title</h2>
-            <p>This is the card description. Here we will provide as much information as possible about the ongoing disaster</p>
-        </div>
-        <div class="col-md-offset-1 col-md-2 event-room-card">
-            <h2>This is the card title</h2>
-            <p>This is the card description</p>
-        </div>
-        <div class="col-md-offset-1 col-md-2 event-room-card">
-            <h2>This is the card title</h2>
-            <p>This is the card description</p>
+    <div class="container">
+        <div class="row" id="active-rooms">
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-offset-2 col-md-2 event-room-card">
-            <h2>This is the card title</h2>
-            <p>This is the card description</p>
-        </div>
-        <div class="col-md-2 col-md-offset-1 event-room-card">
-            <h2>This is the card title</h2>
-            <p>This is the card description</p>
-        </div>
-        <div class="col-md-2 col-md-offset-1 event-room-card">
-            <h2>This is the card title</h2>
-            <p>This is the card description</p>
+
+    <div class="container">
+        <div class="row" id="inactive-rooms">
+            <h1>InActive Event Rooms</h1>
+            <hr style="border-color: #bdbdbd">
+            <br>
         </div>
     </div>
-</div>
 
 
-
-
-<script
-        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="./js/dashboard.js"></script>
 </body>
 </html>
