--- a/unauth_event_room.html
+++ b/unauth_event_room.html
@@ -7,14 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="./css/event_room.css"> -->
+    <link rel="stylesheet" href="./css/unauth_event_room.css">
 
-    <style>
-        #ping-room{
-            height:600px;
-            border: solid 1px #212121;
-        }
-    </style>
 </head>
 <body>
 
