--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Dashboard<span class="sr-only">(current)</span></a></li>
-                    <li><a href="#" onclick="createRoom()">Create-Room</a></li>
+                    <li><a href="#" data-toggle="modal" data-target="#create-room">Create-Room</a></li>
                     <li><a href="#">Whisper Chat</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -38,6 +38,61 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
+
+    <!-- Button trigger Create room Modal -->
+    <!--<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#create-room">-->
+        <!--Launch demo modal-->
+    <!--</button>-->
+
+    <!-- Create Room Modal -->
+    <div class="modal fade" id="create-room" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Create a new Room</h4>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="input-group">
+                            <span class="input-group-addon" id="title">Title</span>
+                            <input id="rm_title" type="text" class="form-control" placeholder="Title" aria-describedby="title">
+                        </div><br>
+
+                        <div class="input-group">
+                            <span class="input-group-addon" id="description">Description</span>
+                            <input id="rm_des" type="text" class="form-control" placeholder="Description" aria-describedby="description">
+                        </div><br>
+
+                        <div class="input-group">
+                            <span class="input-group-addon" id="country">Country</span>
+                            <input id="rm_country" type="text" class="form-control" placeholder="Country" aria-describedby="country">
+                        </div><br>
+
+                        <div class="input-group">
+                            <span class="input-group-addon" id="state">State</span>
+                            <input id="rm_state" type="text" class="form-control" placeholder="State" aria-describedby="state">
+                        </div><br>
+
+                        <div class="input-group">
+                            <span class="input-group-addon" id="city">City</span>
+                            <input id="rm_city" type="text" class="form-control" placeholder="City" aria-describedby="city">
+                        </div><br>
+
+                        <div class="input-group">
+                            <span class="input-group-addon" id="serviceProviders">Providers</span>
+                            <input id="rm_providers" type="text" class="form-control" placeholder="Providers" aria-describedby="serviceProviders" id="tags">
+                        </div>
+
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" onclick="createRoom()">Create Room</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- JumboTron -->
     <div class="jumbotron" style="background-color: #F57C00; margin-top: -20px">
@@ -73,6 +128,7 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
     <script src="./js/dashboard.js"></script>
 </body>
 </html>
